--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "parcel build index.html --public-url /personal/ --no-source-maps --out-dir build"
   },
+  "dependencies": {
+    "normalize.css": "^8.0.1"
+  },
   "devDependencies": {
     "@babel/core": "^7.4.5",
     "@babel/preset-env": "^7.4.5",
