--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "build": "parcel build index.html --public-url /personal/ --no-source-maps --out-dir build"
   },
   "dependencies": {
-    "normalize.css": "^8.0.1"
+    "normalize.css": "^8.0.1",
+    "sweet-scroll": "^4.0.0",
+    "waypoints": "^4.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.4.5",
