--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build": "parcel build index.html --public-url /personal/ --no-source-maps --out-dir build"
   },
   "dependencies": {
+    "@glidejs/glide": "^3.3.0",
     "normalize.css": "^8.0.1",
     "sweet-scroll": "^4.0.0",
     "waypoints": "^4.0.1"
