--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@glidejs/glide": "^3.3.0",
+    "micromodal": "^0.4.0",
     "normalize.css": "^8.0.1",
     "sweet-scroll": "^4.0.0",
     "waypoints": "^4.0.1"
