--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
   },
   "dependencies": {
     "@fontsource/roboto-condensed": "^4.5.0",
+    "@glidejs/glide": "^3.4.1",
     "gatsby": "^3.12.0",
     "gatsby-plugin-linaria": "^2.2.0",
     "linaria": "^3.0.0-beta.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
+  },
+  "devDependencies": {
+    "@types/glidejs__glide": "^3.4.1"
   }
 }
