--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
   "dependencies": {
     "@fontsource/roboto-condensed": "^4.5.0",
     "@glidejs/glide": "^3.4.1",
+    "babel-plugin-styled-components": "^2.0.2",
     "gatsby": "^3.12.0",
-    "gatsby-plugin-linaria": "^2.2.0",
-    "linaria": "^3.0.0-beta.3",
+    "gatsby-plugin-styled-components": "^5.3.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
-    "@types/glidejs__glide": "^3.4.1"
+    "@types/glidejs__glide": "^3.4.1",
+    "@types/styled-components": "^5.1.16"
   }
 }
