--- a/package.json
+++ b/package.json
@@ -15,6 +15,11 @@
   "dependencies": {
     "@fontsource/roboto-condensed": "^4.5.0",
     "@glidejs/glide": "^3.4.1",
+    "@mui/icons-material": "^5.2.0",
+    "@mui/lab": "^5.0.0-alpha.58",
+    "@mui/material": "^5.2.2",
+    "@mui/styled-engine": "npm:@mui/styled-engine-sc@latest",
+    "@mui/styled-engine-sc": "^5.1.0",
     "babel-plugin-styled-components": "^2.0.2",
     "gatsby": "^3.12.0",
     "gatsby-plugin-styled-components": "^5.3.0",
@@ -31,5 +36,8 @@
     "@types/glidejs__glide": "^3.4.1",
     "@types/styled-components": "^5.1.16",
     "babel-loader": "^8.2.3"
+  },
+  "resolutions": {
+    "@mui/styled-engine": "npm:@mui/styled-engine-sc@latest"
   }
 }
