--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "gatsby-plugin-styled-components": "^5.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.0.2",
+    "react-scrollama": "^2.2.16",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
