--- a/package.json
+++ b/package.json
@@ -13,33 +13,24 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
-    "@fontsource/roboto-condensed": "^4.5.0",
-    "@glidejs/glide": "^3.4.1",
-    "@mui/icons-material": "^5.2.0",
-    "@mui/lab": "^5.0.0-alpha.58",
-    "@mui/material": "^5.2.2",
-    "@mui/styled-engine": "npm:@mui/styled-engine-sc@latest",
-    "@mui/styled-engine-sc": "^5.1.0",
-    "babel-plugin-styled-components": "^2.0.2",
-    "gatsby": "^3.12.0",
-    "gatsby-plugin-styled-components": "^5.3.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-router-dom": "^6.0.2",
-    "react-scrollama": "^2.2.16",
-    "styled-components": "^5.3.3"
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@fontsource/roboto-condensed": "^5.0.8",
+    "@glidejs/glide": "^3.6.0",
+    "@mui/icons-material": "^5.14.3",
+    "@mui/lab": "^5.0.0-alpha.139",
+    "@mui/material": "^5.14.4",
+    "@mui/styled-engine": "^5.13.2",
+    "@mui/styled-engine-sc": "^5.12.0",
+    "gatsby": "^5.11.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.15.0",
+    "react-scrollama": "^2.3.2",
+    "styled-components": "^6.0.7"
   },
   "devDependencies": {
-    "@babel/core": "^7.16.0",
-    "@storybook/addon-actions": "^6.4.7",
-    "@storybook/addon-essentials": "^6.4.7",
-    "@storybook/addon-links": "^6.4.7",
-    "@storybook/react": "^6.4.7",
-    "@types/glidejs__glide": "^3.4.1",
-    "@types/styled-components": "^5.1.16",
-    "babel-loader": "^8.2.3"
-  },
-  "resolutions": {
-    "@mui/styled-engine": "npm:@mui/styled-engine-sc@latest"
+    "@types/glidejs__glide": "^3.6.1",
+    "@types/styled-components": "^5.1.26"
   }
 }
