--- a/package.json
+++ b/package.json
@@ -27,13 +27,11 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
     "react-scrollama": "^2.3.2",
-    "react-swipeable-views": "^0.14.0",
-    "styled-components": "^6.0.7"
+    "react-swipeable-views": "^0.14.0"
   },
   "devDependencies": {
     "@types/react-swipeable-views": "^0.13.2",
     "@types/react-swipeable-views-utils": "^0.13.4",
-    "@types/styled-components": "^5.1.26",
     "prettier": "^3.0.1"
   }
 }
