--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
     "react-scrollama": "^2.3.2",
-    "react-swipeable-views": "^0.14.0"
+    "react-swipeable-views": "^0.14.0",
+    "react-typed": "^1.2.0"
   },
   "devDependencies": {
     "@types/react-swipeable-views": "^0.13.2",
