--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gatsby": "^5.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-fast-marquee": "^1.6.0",
     "react-router-dom": "^6.15.0",
     "react-scrollama": "^2.3.2",
     "react-swipeable-views": "^0.14.0",
